# mighty-grpc

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.toml
client-examples/js/: README.md  generate_protos.js  mighty_client.js  package-lock.json  package.json
client-examples/python/: README.md  mighty_client.py
src/: lib.rs
src/config/: mod.rs
src/proto/: mighty_inference.proto  mod.rs
src/services/: mod.rs
src/services/clients/: binary.rs  json_response_converters.rs  mod.rs  rest.rs
src/services/server_proxy/: mod.rs
tests/: integration_test.rs
