[package]
name = "mighty-grpc"
version = "0.1.0"
edition = "2021"

[features]
default = ["rest"]
rest = []
binary = []

[dependencies]
actix-web = "4.6.0"
anyhow = "1.0.86"
async-trait = "0.1.80"
cfg-if = "1.0.0"
config = "0.14.0"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
prost = "0.12.6"
prost-types = "0.12.6"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tonic = "0.11.0"
tonic-reflection = "0.11.0"


[build-dependencies]
tonic-build = "0.11.0"
